--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>JC</groupId>
-    <artifactId>NiceReportVersionMaker</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>JC-Integrity-Report</artifactId>
+    <version>1.0</version>
     <build>
         <plugins>
             <plugin>
